<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/toolbar_color">

        <TextView
            android:id="@+id/add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text="@string/toobar_add_city"/>

        <ImageButton
            android:id="@+id/add_city_btn"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@id/add_text"
            android:layout_alignRight="@id/add_text"
            android:layout_above="@id/add_text"
            android:layout_marginBottom="5dp"
            android:src="@drawable/add_selector"
        />

        <TextView
            android:id="@+id/signal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/add_text"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/signal_text"
        />

        <ImageButton
            android:id="@+id/signal_btn"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@id/signal_text"
            android:layout_alignRight="@id/signal_text"
            android:layout_above="@id/add_text"
            android:layout_marginBottom="5dp"
            android:src="@drawable/signal_selector"
        />

        <TextView
            android:id="@+id/trend_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/add_text"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/trend_text"
        />

        <ImageButton
            android:id="@+id/trend_btn"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@id/trend_text"
            android:layout_alignRight="@id/trend_text"
            android:layout_above="@id/add_text"
            android:layout_marginBottom="5dp"
            android:src="@drawable/trend_selector"
        />

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/frag_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
    >
    </android.support.v4.view.ViewPager>

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="261dp"
        android:layout_marginLeft="15dp"
        android:padding = "8dp"
        app:fillColor="#FFFFFF"
        app:pageColor="@android:color/transparent"
        app:radius="3dp"
        app:strokeColor="#bbbbbb"
        app:strokeWidth="1dp"/>

    <ViewStub
        android:id="@+id/add_viewstub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout="@layout/add_viewstub_layout"
    />

    <ViewStub
        android:id="@+id/signal_viewstub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout="@layout/signal_viewstub_layout"
    />

    <ViewStub
        android:id="@+id/trend_viewstub"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout="@layout/trend_viewstub_layout"
    />
</RelativeLayout>
